force-app/main/default/objects/Polaris_Api_Access_Token__mdt/Polaris_Api_Access_Token__mdt.object-meta.xml
<CustomObject>
    <label>Polaris Api Access Token</label>
    <pluralLabel>Polaris Api Access Tokens</pluralLabel>
</CustomObject>