force-app/main/default/objects/Polaris_Api_Access_Token__mdt/fields/Authorization_Header__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Header__c</fullName>
    <description>Store Auth Header details used to generate Auth token.</description>
    <label>Authorization Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>