force-app/main/default/objects/Polaris_Api_Access_Token__mdt/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <label>Request Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>