force-app/main/default/objects/Polaris_Api_Access_Token__mdt/fields/Secret_ID__c.field-meta.xml
<CustomField>
    <fullName>Secret_ID__c</fullName>
    <label>Secret ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>